...
fun EntryBottomNavigation(
    selectedItem: String,
    onItemSelected: (String) -> Unit,
    modifier: Modifier = Modifier
) {
    val items = remember { listOf(
        EntryNavigationDestination("Home", Icons.Outlined.Home, Icons.Rounded.Home),
        EntryNavigationDestination("Search", Icons.Outlined.Search, Icons.Rounded.Search),
        EntryNavigationDestination(
            "My Bookings",
            Icons.Outlined.ConfirmationNumber,
            Icons.Outlined.ConfirmationNumber
        ),
        EntryNavigationDestination(
...
